--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,3 +1,15 @@
 /* ********* */
 /* @VARIABLES */
 /* ********* */
+
+//Colores
+
+$colorFondo1: #f2f8f8;
+$colorFondo2: #fff;
+$colorBoton: #4582ff;
+$colorTexto: #989ca9;
+$colorTextoDestacado: #4582ff;
+
+//Tamaños
+
+$tamañoEscritorio: 1366px;
