--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,3 +1,23 @@
 /* ********* */
 /* @TYPOGRAPHY */
 /* ********* */
+
+*{
+    font-family: sans-serif;
+}
+h1{
+    font-size: 32px;
+}
+
+h2{
+    font-size: 28px;
+}
+
+p{
+    color: $colorTexto;
+    font-size: 18px;
+}
+
+.azul{
+    color: $colorTextoDestacado;
+}
