--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,3 +1,95 @@
 /* ********* */
 /* @HOME */
 /* ********* */
+
+//Contenedor
+
+.contenedor {
+  display: flex;
+  // align-items: center;
+  // justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
+// Primer Section
+
+.primero {
+  background-color: $colorFondo1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  padding: 2rem 4rem;
+  .primero__texto {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    p {
+      margin-bottom: 2rem;
+    }
+
+    .azul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      span {
+        width: 10px;
+        height: 80px;
+        background-color: $colorTextoDestacado;
+        margin-right: 1rem;
+        padding: 10px 0;
+      }
+    }
+
+    a {
+      display: flex;
+      align-items: center;
+      background-color: $colorBoton;
+      color: #fff;
+      padding: 1.3rem;
+      border-radius: 10px;
+      margin-top: 2rem;
+      width: fit-content;
+
+      img {
+        height: 30px;
+        padding: 0 1rem 0 0.5rem;
+      }
+    }
+  }
+}
+
+.segundo {
+  background-color: $colorFondo2;
+  display: flex;
+  height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4rem;
+  .segundo__texto {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    p {
+      margin-top: 2rem;
+    }
+
+    ul {
+      margin-top: 2rem;
+      list-style-type: none;
+      li {
+        padding: 0.5rem;
+        color: $colorTexto;
+        &::before {
+          content: "\2714";
+          height: 30px;
+          color: $colorTextoDestacado;
+          padding-right: 1rem;
+          font-weight: bolder;
+        }
+      }
+    }
+  }
+}
