--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -21,7 +21,8 @@
   align-items: center;
   height: 100vh;
   width: 100%;
-  padding: 2rem 4rem;
+  padding: 6rem;
+  //Texto del lado derecho
   .primero__texto {
     width: 50%;
     display: flex;
@@ -34,15 +35,17 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      //Liniea lateral en el texto destacado
       span {
         width: 10px;
-        height: 80px;
+        height: 100px;
         background-color: $colorTextoDestacado;
         margin-right: 1rem;
         padding: 10px 0;
       }
     }
 
+    //boton
     a {
       display: flex;
       align-items: center;
@@ -52,7 +55,7 @@
       border-radius: 10px;
       margin-top: 2rem;
       width: fit-content;
-
+      // Icono del botón
       img {
         height: 30px;
         padding: 0 1rem 0 0.5rem;
@@ -67,7 +70,8 @@
   height: 100vh;
   justify-content: space-between;
   align-items: center;
-  padding: 4rem;
+  padding: 6rem;
+  //Texto de lateral izq
   .segundo__texto {
     width: 50%;
     display: flex;
@@ -76,6 +80,8 @@
       margin-top: 2rem;
     }
 
+    // Lista
+    //Modificación de los puntos del ul por check
     ul {
       margin-top: 2rem;
       list-style-type: none;
